# GraphMB

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  amber.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
benchmarks/: aale.sh  aale_bs.sh  aale_gnn.sh  aale_loss_gcn3.sh  aale_loss_vae.sh  aale_lr.sh  aale_vae.sh  losscoef_vae.sh  noise_experiments.sh  run_strong100.sh  run_test.sh  run_wwtp.sh  runs.sh  simHC.sh  simHC_edges.sh  strong100.sh  test_graphmb.sh  vaegnn_hyperparam.sh
data/: Bacteria.ms
data/strong100/: edges_depth.txt  marker_gene_stats.tsv
docs/source/: conf.py  development.rst  examples.rst  graphmb.rst  index.rst  intro.rst  modules.rst
docs/source/_build/html/: .buildinfo  objects.inv  searchindex.js
docs/source/_build/html/.doctrees/: environment.pickle  examples.doctree  graphmb.doctree  index.doctree  intro.doctree  modules.doctree
results/: graphbemb experiments.ods  graphmb 0.2 results.ods
src/: contigsdataset.py  evaluate.py  graph_functions.py  graphsage_unsupervised.py  main.py
src/graphemb/: contigsdataset.py  graph_functions.py  graphsage_unsupervised.py  main.py
src/graphmb/: __init__.py  amber_eval.py  arg_options.py  contigsdataset.py  dgl_dataset.py  evaluate.py  gnn_models.py  graph_functions.py  graphmb1.py  graphsage_unsupervised.py  laf_layers.py  laf_models.py  main.py  main_hydra.py  models.py  train_auggnn.py  train_ccvae.py  train_gnn.py  train_gnn_decode.py  train_vae.py  train_vaegnn.py  utils.py  vae.py  vaegbin.py  vamb_clustering.py  version.py  visualize.py
src/graphmb/unused/: train_gnn.py  train_gnn_decode.py
