[tool.poetry]
name = "graphmb"
version = "0.1.0"
description = "Binner based on deep learning and assembly graph embeddings"
authors = ["Andre Lamurias"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
vamb = {git = "https://github.com/AndreLamurias/vamb"}
networkx = "2.6.2"
scikit-learn = "0.24.2"
dgl = "0.6.1"
tqdm = "4.61.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"