[metadata]
name = graphemb-andrelamurias
version = 0.0.1
author = Andre Lamurias
author_email = andrel@cs.aau.dk
description = Binner based on deep learning and assembly graph embeddings
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src