[metadata]
name = graphmb-andrelamurias
version = 0.1.1
author = Andre Lamurias
author_email = andrel@cs.aau.dk
description = Binner based on deep learning and assembly graph embeddings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreLamurias/GraphMB
project_urls =
    Bug Tracker = https://github.com/AndreLamurias/GraphMB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License  
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    vamb @ git+ssh://git@github.com/AndreLamurias/vamb.git
    networkx==2.6.2
    #torch==1.7.1
    scikit-learn==0.24.2
    dgl==0.6.1
    tqdm==4.61.2
    
include_package_data = True 

[options.packages.find]
where = src

